# SQL-Clean

./: .gitignore  CMakeLists.txt  Makefile  README.md
Collumn/: Collumn.cpp  Collumn.h  Tests.cpp
Common/Error/: Error.cpp  Error.h
Common/Test/: Test.cpp
GenericObject/: GenericObject.cpp  GenericObject.h  Tests.cpp
ObjectType/: ObjectType.cpp  ObjectType.h  Tests.cpp
Parcer/: Main.cpp  Parse.cpp  Parse.h  Playground.cpp  Statement.cpp  Statement.h  Tokenizer.cpp  Tokenizer.h
Parcer/CreateCollumnSt/: CreateCollumnSt.cpp  CreateCollumnSt.h
Parcer/CreateTableSt/: CreateTableSt.cpp  CreateTableSt.h
Parcer/GetTypeSt/: GetTypeSt.cpp  GetTypeSt.h
Parcer/GetValueSt/: GetValueSt.cpp  GetValueSt.h
Parcer/Global/: Global.cpp  Global.h
Parcer/InsertSt/: InsertSt.cpp  InsertSt.h
Table/: Table.cpp  Table.h  Tests.cpp
